--- a/composer.json
+++ b/composer.json
@@ -5,15 +5,44 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Ikechukwukalu\\Dynamicdatabaseconfig\\": "src/"
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\": "src/",
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Middleware\\": "src/Middleware/",
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Models\\": "src/Models/",
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Trait\\": "src/Models/",
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Console\\Commands\\": "src/Console/Commands/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Tests\\": "Tests/"
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "authors": [
         {
             "name": "Ikechukwu Kalu",
-            "email": "ea.ikechukwukkalu@gmail.com"
+            "email": "ea.ikechukwukalu@gmail.com"
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": ">=8.0",
+        "laravel/framework": "^9.0|^10.0"
+    },
+    "require-dev": {
+        "mockery/mockery": "^1.4.4",
+        "orchestra/testbench": "^7.0|^8.0",
+        "phpunit/phpunit": "^9.0|^10.0",
+        "php-parallel-lint/php-parallel-lint": "dev-develop"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Ikechukwukalu\\Dynamicdatabaseconfig\\DynamicDatabaseConfigServiceProvider"
+            ]
+        }
+    }
 }
