--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Ikechukwukalu\\Dynamicdatabaseconfig\\Tests\\": "Tests/"
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Tests\\": "Tests/",
+            "Ikechukwukalu\\Dynamicdatabaseconfig\\Tests\\Seeders\\": "Tests/Seeders/"
         }
     },
     "scripts": {
