Updated packages list in composer.json

--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,12 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=8.0",
-        "laravel/framework": "^9.0|^10.0"
+        "illuminate/console": "^9.0|^10.0",
+        "illuminate/database": "^9.0|^10.0",
+        "illuminate/http": "^9.0|^10.0",
+        "illuminate/routing": "^9.0|^10.0",
+        "illuminate/support": "^9.0|^10.0",
+        "php": ">=8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.4",
