--- a/composer.json
+++ b/composer.json
@@ -30,17 +30,17 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "illuminate/console": "^9.0|^10.0",
-        "illuminate/database": "^9.0|^10.0",
-        "illuminate/http": "^9.0|^10.0",
-        "illuminate/routing": "^9.0|^10.0",
-        "illuminate/support": "^9.0|^10.0",
-        "php": ">=8.0"
+        "illuminate/console": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/database": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/http": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/routing": "^8.0|^9.0|^10.0|^11.0",
+        "illuminate/support": "^8.0|^9.0|^10.0|^11.0",
+        "php": ">=7.3"
     },
     "require-dev": {
-        "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^7.0|^8.0",
-        "phpunit/phpunit": "^9.0|^10.0",
+        "mockery/mockery": "^1.0|^2.0",
+        "orchestra/testbench": "^6.0|^7.0|^8.0|^9.0",
+        "phpunit/phpunit": "^9.0|^10.0|^11.0",
         "php-parallel-lint/php-parallel-lint": "dev-develop"
     },
     "extra": {
